--- a/examples/html-ex1.html
+++ b/examples/html-ex1.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"> <!--this is here to tell the browser what unicode format we're using for our characters.-->
-	<title>This is a basic HTML5 document</title> <!--The title tag is what goes on the tab in your browser. It can only contain text and there can be only one. Just like Highlander-->
+	<title>This is a basic HTML5 document</title> <!--The title tag is what goes on the tab in your browser. It can only contain text and there can be only one. Just like Highlander. -->
 </head>
 <body>
 
