--- a/project/index.html
+++ b/project/index.html
@@ -10,6 +10,7 @@
 		<!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
 	</head>
 	<body>
+
 		<!-- HEADER -->
 		<header>
 			<a class="download" href="resume.pdf" download>Download resume (pdf)</a>
@@ -17,6 +18,8 @@
 			<h2>Job Title or Tagline</h2>
 		</header>
 
+
+		<!-- NAVIGATION MENU -->
 		<nav>
 			<ul>
 				<li><a href="#profile" alt="about me link">About Me</a></li>
@@ -27,10 +30,11 @@
 			</ul>
 		</nav>
 
+
 		<!-- ABOUT ME / PROFILE -->
 		<section class="profile" id="profile">
 			<div class="content-wrap clearfix">
-				<img class="profile-image" src="images/profile-generic.jpg" alt="Christina Truong">
+				<img class="profile-image" src="images/doggy.jpg" alt="">
 				<div class="summary">
 					<h2>Hello!</h2>
 					<p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
@@ -91,6 +95,7 @@
 				</div>
 			</div>
 		</section>
+
 
 		<!-- SKILLS -->
 		<section class="skills" id="skills">
