--- a/project/index.html
+++ b/project/index.html
@@ -6,21 +6,21 @@
 		
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<!-- <link rel="stylesheet" href="stylesheets/normalize.css"> -->
-		<!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
+
+		<!-- PUT THE STYLESHEET LINK HERE -->
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 
 		<!-- HEADER -->
 		<header>
-			<a class="download" href="resume.pdf" download>Download resume (pdf)</a>
 			<h1>Your Name Here</h1>
 			<h2>Job Title or Tagline</h2>
 		</header>
 
 
 		<!-- NAVIGATION MENU -->
-		<nav>
+		<!-- <nav>
 			<ul>
 				<li><a href="#profile" alt="about me link">About Me</a></li>
 				<li><a href="#workExperience" alt="work experience link">Work Experience</a></li>
@@ -28,7 +28,7 @@
 				<li><a href="#education" alt="education link">Education</a></li>
 				<li><a href="#contact" alt="contact link">Contact Info</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 
 
 		<!-- ABOUT ME / PROFILE -->
@@ -103,35 +103,32 @@
 				<h2>Skills</h2>
 
 				<div class="skills-list clearfix">
-					<h3>List Option / Title</h3>
-
 					<div class="columns">
-						<h4>Best at:</h4>
+						<h3>Best at:</h3>
 						<ul>
-							<li><i class="fa fa-check"></i> HTML / HTML5</li>
-							<li><i class="fa fa-check"></i> CSS / CSS3</li>
+							<li><i class="fa fa-check"></i> HTML5 / CSS3</li>
 							<li><i class="fa fa-check"></i> Less / Sass</li>
 							<li><i class="fa fa-check"></i> JavaScript / jQuery</li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Worked with:</h4>
+						<h3>Worked with:</h3>
 						<ul>
 							<li><i class="fa fa-check"></i> Wordpress</li>
 							<li><i class="fa fa-check"></i> PHP</li>
-							<li><i class="fa fa-check"></i> Processing</li>
+							<li><i class="fa fa-check"></i> Another Thing</li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Learning:</h4>
+						<h3>Learning:</h3>
 						<ul>
-							<li><i class="fa fa-check"></i> angular.js</li>	
-							<li><i class="fa fa-check"></i> Stylus</li>	
+							<li><i class="fa fa-check"></i> Topic</li>	
+							<li><i class="fa fa-check"></i> Something Else</li>	
 						</ul>
 					</div>				
 				</div>
 
-				<div class="skills-circles">
+				<!-- <div class="skills-circles">
 					<h3>Circle Option / Title</h3>
 					<ul>
 						<li><span>Social Media</span></li>
@@ -139,7 +136,7 @@
 						<li><span>Brand Identity</span></li>
 						<li><span>Graphic Design</span></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</section>
 
