--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Before we go into responsive design techniques, let's go over & review some fund
     </section>
 
     <section class="slide" data-markdown>
-## First up: the `class` attribute!
+## First up: the class attribute!
 
 Classes are used mostly for styling and can be reused throughout your code.  Name the class anything you want! To use it, include it in the *opening* tag. You can have an unlimited number of classes on each element, but only add them if you absolutely need to.
 
@@ -1090,6 +1090,16 @@ That's it!
       </ul>
 
       <p>Take a look at <strong>final.html</strong> & <strong>final.css</strong> to get some more ideas!</p>
+    </section>
+
+    <section class="slide" data-markdown>
+      ##Additional Resources
+
+      * [Learn to Code Advanced HTML & CSS](http://learn.shayhowe.com/advanced-html-css/)
+      * [Mobile First](http://www.lukew.com/resources/mobile_first.asp) by Luke Wroblewski
+      * [Responsive Resources](http://bradfrost.github.io/this-is-responsive/resources.html)
+      * [http://mediaqueri.es/](http://mediaqueri.es/)
+      
     </section>
 
     <!-- Last slide -->
