removing unused images

--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ We have a handy tool to see our page in specific device sizes, and to help us fi
       <h2>A Brief Interlude: the Web Inspector</h2>
        <a href="https://developer.chrome.com/devtools/docs/device-mode">More about the web inspector</a>
       <p>The red box: our website. The green box: our HTML. The orange box: our CSS rules.</p>
-      <img src="images/emulator.jpg">
+      <img src="framework/img/workshop/emulator.jpg">
     </section>
 
     <section class="slide" data-markdown>
