updated title, added resource

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <img class="logo" src="framework/img/logo-llc-white.png">
       <div class="info">
         <h1>
-          <span class="title-bg">Intro to HTML5 and</span>
-          <span class="title-bg">Responsive Design</span>
+          <span class="title-bg">Intro to Responsive Design:</span>
+          <span class="title-bg">Build Mobile Friendly Websites</span>
         </h1>
         <h2><span>with</span> Christina Truong</h2>
 
@@ -1196,6 +1196,7 @@ That's it!
       * [Responsive Resources](http://bradfrost.github.io/this-is-responsive/resources.html)
       * [http://mediaqueri.es/](http://mediaqueri.es/) - collection of responsive websites
       * http://responsivenavigation.net/ - responsive navigation examples
+      * [Google: The New Multi-Screen World](https://www.thinkwithgoogle.com/research-studies/the-new-multi-screen-world-study.html)
       
     </section>
 
@@ -1204,8 +1205,8 @@ That's it!
       <h2>Thank you!</h2>
 
       <h2 class="title">
-          <span class="title-bg">INTRO TO HTML5</span><br>
-          <span class="title-bg">AND RESPONSIVE DESIGN</span>
+        <span class="title-bg">Intro to Responsive Design:</span><br>
+        <span class="title-bg">Build Mobile Friendly Websites </span>
       </h2>
       <h3><span>with</span> Christina Truong</h3>
 
