tiny syntax highlighting content fix

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Inside of the folder you downloaded today, there are several folders that contai
 ```
 llc-responsive-design-master
   |-- framework // Contains files needed for slide presentation. Do not edit!
-  |-- project // Contains exercise files for today's workshop.
+  |-- project // Contains exercise files for this workshop.
   |-- index.html // This is the file you're viewing right now (slides)!
 ```
 
