Changing index.html to slides.html

--- a/slides.html
+++ b/slides.html
@@ -328,8 +328,8 @@ Inside of the folder you downloaded today, there are several folders that contai
 ```
 llc-responsive-design-master
   |-- framework // Contains files needed for slide presentation. Do not edit!
-  |-- project // Contains exercise files for this workshop.
-  |-- index.html // This is the file you're viewing right now (slides)!
+  |-- project // Contains all the exercise files for this workshop. (images, CSS & HTML files)
+  |-- slides.html // This is the file you are viewing right now!
 ```
 
 In Sublime Text, let's open [index.html](project/index.html) in your **project** folder and make some changes.
