--- a/slides.html
+++ b/slides.html
@@ -25,10 +25,10 @@
       
       <div class="instructions">
         <!-- ADD WIFI INFO HERE -->
-        <h2>Get <br>Connected</h2>
+        <!-- <h2>Get <br>Connected</h2>
         <p><strong>Wifi:</strong> wifi network</p>
         <p><strong>Password:</strong> wifi password</p>
-        <hr>
+        <hr> -->
         
         <h2>Download<br> & Install</h2>
         <ol class="downloads">
